--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,623 @@
 
 
 
+.header {
+  position: relative;
+  overflow: hidden;
+  color: #fff;
+}
+
+.header__content {
+  /* position: relative; */
+  background-color: #000;
+}
+
+.header__bot-content {
+  padding-top: 20px;
+  padding-bottom: 15px;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.header__bot-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  /* padding-right: 35px; */
+}
+
+.header__container {
+  /* position: relative; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 30px;
+  padding-bottom: 27px;
+}
+
+.header__logo {
+  display: block;
+  max-width: 178px;
+  padding-left: 10px;
+}
+
+.header__nav {
+  margin-left: 179px;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+
+
+.header__list {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+  margin-bottom: auto;
+}
+
+
+
+.burger {
+  position: relative;
+  width: 36px;
+  height: 27px;
+  display: none;
+  border: none;
+  padding: 0;
+  z-index: 4;
+  background-color: transparent;
+  cursor: pointer
+}
+.nav-close{
+  display: none;
+}
+.burger__line {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 28px;
+  height: 3px;
+  background-color: #fff;
+  transform: translateY(-50%);
+  transition: opacity 0.3s ease-in-out;
+}
+.burger::before,
+.burger::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 3px;
+  background-color: #fff;
+  transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, bottom 0.3s ease-in-out;
+}
+
+.burger::before {
+  width: 36px;
+  top: 0;
+}
+
+.burger::after {
+  bottom: 0;
+  width: 24px;
+}
+
+/* ? FORM  для 768*/
+
+
+.form-wrapper {
+  display: none;
+}
+
+
+
+
+
+
+/*! Desktop */
+
+.form-desktop {
+  display: flex;
+  align-items: center;
+  /* top: 50%;
+  z-index: 1;
+  transform: translate(0, 50%);
+  transition: transform .3s ease-in-out, opacity .3s ease-in-out .2s,
+  visibility .3s ease-in-out .2s;*/
+  margin-right: 20px;
+}
+.form__input {
+  transition: border 0.3s ease-in-out;
+}
+
+.form-btn-submit {
+  margin-right: 10px;
+}
+
+.form-input-desktop {
+  max-width: 214px;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  background-color: transparent;
+  color: #FFFFFF;
+  cursor: pointer;
+  transition: border-color 0.3s ease-in-out;
+}
+.form-input-desktop:hover {
+  border-bottom: 1px solid #C283F3;
+}
+/* ! */
+
+.form__input::placeholder {
+  visibility: hidden;
+  color: rgba(255, 255, 255, 0.85);
+}
+
+.form__input:hover {
+  border-bottom: 1px solid #C283F3;
+}
+.form__input:active {
+  border-bottom: 1px solid #7943A4;
+}
+
+
+.header__link {
+  transition: color 0.3s ease-in-out;
+}
+
+.header__link:hover {
+  color: #C283F3;
+}
+
+.header__link:focus-visible {
+  color: #fff;
+}
+
+
+.header__link:active {
+  color: #7943A4;
+
+}
+
+.header__link {
+  position: relative;
+  z-index: 1;
+}
+.header__nav-btn {
+  position: relative;
+  /* width: 257px;
+  height: 60px; */
+  display: inline-block;
+  margin-bottom: 10px;
+  padding: 15px 85px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 600;
+  color: #FFFFFF;
+  border: 2px solid #9D5CD0;
+  border-radius: 100px;
+  background-color: transparent;
+  outline: none;
+  transition: .3s ease-in-out;
+  cursor: pointer;
+  z-index: 1;
+  display: none;
+}
+.header__nav-btn::before {
+  content: '';
+  position: absolute;
+  top: -8 px;
+  left: -8 px;
+  bottom: -8 px;
+  right: -8 px;
+  border: 2 px solid  #9D5CD0;
+  border-radius: 100px;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+}
+
+.header__item:not(:first-child) {
+  margin-left: 62px;
+}
+
+.header__login-desktop {
+  position: relative;
+  z-index: 1;
+  padding-right: 9px;
+  display: flex;
+  align-items: center;
+  font-family: Open Sans;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  transition: color 0.3s ease-in-out;
+}
+
+.header__login-desktop svg {
+  margin-right: 7px;
+}
+
+.header__login-desktop:hover {
+  color: #C283F3;
+}
+
+.header__login-desktop:active {
+  color: #7943A4;
+}
+.header__login-desktop path {
+  transition: fill 0.3s ease-in-out;
+}
+
+.header__login-desktop:hover path {
+  fill: #C283F3;
+}
+.header__login-desktop:active path {
+  fill: #7943A4;
+}
+.header__login-desktop-text {
+  transition: color 0.2s ease-out;
+}
+
+/* .header__login-text:hover {
+  color: #9D5CD0;
+}
+
+.header__login-text:active {
+  background: #9D5CD0;
+  color: #fff;
+}
+
+.header__login-text:focus {
+  color: #7943A4;
+} */
+
+.hero-slide img {
+  width: 100%;
+
+}
+
+.header .swiper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  animation: grow 8s ease-in-out 1s infinite;
+}
+
+
+.hero-container {
+  display:flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: start;
+  padding-top: 67px;
+  padding-left: 31px;
+  position: relative;
+  color: #fff;
+  z-index: 2;
+}
+
+
+/* .hero-swiper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: animation-slide 4s ease-in-out 1s infinite;
+} */
+.hero-slide {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: background-image 0.5s ease-in-out;
+  /* animation: grow 8s ease-in-out infinite alternate; */
+}
+.hero-slide--1 {
+  background-image: url('../../img/banner-swiper/slide1.jpg');
+}
+.hero-slide--2 {
+  background-image: url('../../img/banner-swiper/slide2.jpg');
+}
+.hero-slide--3 {
+  background-image: url('../../img/banner-swiper/slide3.jpg');
+}
+
+@keyframes grow {
+  0% {
+      transform: scale(100%);
+  }
+  25% {
+      transform: scale(125%);
+  }
+  50% {
+      transform: scale(110%);
+  }
+  75% {
+      transform: scale(135%);
+  }
+  100% {
+      transform: scale(100%);
+  }
+}
+
+.hero-title {
+  max-width: 597px;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 91px;
+  margin-bottom: 7px;
+}
+
+.hero-text {
+  max-width: 579px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  margin: 0px 0px 92px 0px;
+}
+
+.hero-btn {
+  display: inline-block;
+  padding: 22px 34px;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  background-color: #9D5CD0;
+  border: 3px solid transparent;
+  border-radius: 100px;
+  margin: 0px 0px 122px 0px;
+  position: relative;
+  z-index: 1;
+  transition-property: background-color, border;
+  transition: .2s ease-in-out;
+}
+
+.simplebar-content-wrapper{
+  visibility: inherit;
+}
+.header__bot-list {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  display: flex;
+}
+
+.header__bot-item {
+  margin-right: 50px;
+}
+
+.header__bot-link {
+  display: flex;
+  align-items: center;
+  color: #fff;
+}
+
+
+.menu__btn:hover {
+  color: #9D5CD0;
+}
+
+.menu__btn:active {
+  color: #fff;
+}
+
+.menu__btn:focus-visible {
+  color: #fff;
+}
+.menu__btn svg path {
+  stroke: #fff;
+  transition: stroke 0.3s ease-in-out;
+}
+.menu__btn:hover svg path {
+  stroke: #9D5CD0;
+}
+
+.menu__btn:active svg path {
+  stroke: #9D5CD0;
+}
+
+
+.header__bot-link img {
+  margin-left: 4px;
+}
+
+
+/*! DROPDONW  */
+.menu {
+  display: flex;
+}
+
+.menu__item {
+  position: relative;
+  flex: 0 0 auto;
+  transition: color 0.3s ease-in-out;
+}
+
+.menu__item:not(:last-child) {
+  margin-right: 75px;
+}
+
+.menu__btn {
+  border: none;
+  padding: 5px 10px;
+  position: relative;
+  z-index: 1;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  color: #fff;
+  cursor: pointer;
+  transition: color 0.3s ease-in-out;
+}
+
+
+.menu__btn--active {
+  color: #7943A4;
+}
+
+.menu__btn--active svg path {
+  stroke: #9D5CD0;
+  transform: rotate(-180deg);
+}
+
+
+.dropdown {
+  position: absolute;
+  left: 0;
+  top: 140%;
+  width: 300px;
+  padding-top: 40px;
+  padding-left: 40px;
+  padding-right: 19px;
+  padding-bottom: 40px;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  z-index: 5;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+}
+
+.dropdown--active {
+  z-index: 6;
+  opacity: 1;
+  visibility: visible;
+}
+
+.dropdown__list {
+  height: 240px;
+}
+
+.dropdown__item {
+  position: relative;
+  transition: border 0.3s ease-in-out;
+}
+
+
+.dropdown__link {
+  position: relative;
+  display: block;
+  max-width: 220px;
+  color: #fff;
+  padding: 10px 15px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  border: 2px solid transparent;
+  transition: border-color 0.3s ease-in-out;
+}
+
+.dropdown__link:hover,
+.dropdown__link:focus-visible {
+  border-color: #9D5CD0;
+}
+
+.dropdown__link::before {
+  content: "";
+  top: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4)), url(.jpg);
+  border: 2px solid #D1A9F0;
+  z-index: -1;
+  opacity: 0;
+  transition-property: z-index, opacity;
+  transition: .3s ease-in-out;
+}
+
+.dropdown__link:active::before {
+  z-index: 3;
+  opacity: 1;
+}
+
+              /* .dropdown__link:focus-visible {
+                border: 2px solid #9D5CD0;
+              } */
+
+.dropdown__link--img-1 {
+  background-image: url('../../img/dropdown/1.jpg');
+}
+
+.dropdown__link--img-2 {
+  background-image: url('../../img/dropdown/2.jpg');
+}
+.dropdown__link--img-3 {
+  background-image: url('../../img/dropdown/3.jpg');
+}
+.dropdown__link--img-4 {
+  background-image: url('../../img/dropdown/4.jpg');
+}
+.dropdown__item {
+  display: block;
+  margin: 0px 0px 20px 0px;
+  width: 100%;
+}
+
+.dropdown__item:last-child {
+  margin-bottom: 0px;
+}
+
+.simplebar-track.simplebar-vertical .simplebar-scrollbar::before {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 2px;
+  opacity: 1;
+  background-color: white;
+}
+.simplebar-track.simplebar-vertical {
+  width: 2px;
+  background-color: #000;
+}
+
+
+
+
+
+@media (max-width:1440px) {
+  .header__nav {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .form-desktop {
+    display: none;
+  }
+  .menu {
+    justify-content: space-evenly;
+  }
+  .header__bot-container {
+    display: block;
+  }
+
+  .menu__item:not(:last-child) {
+    margin-right: 0;
+  }
+
+
+}
 
 
 
